updates to about optics

--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -10,7 +10,7 @@
     <script src="./js/login.js" defer></script>
     <script src="./js/classSchedule.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
-    <title>Full Stack MMA</title>
+    <title>About MMA</title>
 </head>
 
 <body class="bg-dark">
@@ -89,7 +89,7 @@
       <div class="jumbotron jumbotron-fluid bg-transparent">
           <div class="text-light align-middle">
 
-               <h1> See the Features of MMA APP</h1>
+               <h1> About the Features of MMA APP</h1>
 <p> This page serves to show the many features of the app, for those that may desire a quick tutorial. Below you will find videos and snap these features. Once you
   have made yourself more familiar with the functionality, feel free to log in.
 </p>
