--- a/public/members.html
+++ b/public/members.html
@@ -236,14 +236,14 @@
                 </label>
               </div>
             </div>
-            <div class="row" id="repeat-dates" style="display: none">
+            <div class="row" id="repeat-dates" style="display: none;">
               <div class="form-group col-6">
                 <label for="start-date">Enter Start Date</label>
-                <input type="date" class="form-control" id="start-date">
+                <input type="date" class="form-control" id="start-date" name="start-date">
               </div>
               <div class="form-group col-6">
                 <label for="end-date">Enter End Date</label>
-                <input type="date" class="form-control" id="end-date">
+                <input type="date" class="form-control" id="end-date" name="end-date">
               </div>
             </div>
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
