--- a/public/members.html
+++ b/public/members.html
@@ -239,6 +239,17 @@
                 <label for="end-date">Enter End Date</label>
                 <input type="date" class="form-control" id="end-date">
               </div>
+              <div class="form-group col-12">
+                <select name="dayOfWeek" id="dayOfWeeks" multiple>
+                  <option value=0>Sunday</option>
+                  <option value=1>Monday</option>
+                  <option value=2>Tuesday</option>
+                  <option value=3>Wednesday</option>
+                  <option value=4>Thursday</option>
+                  <option value=5>Friday</option>
+                  <option value=6>Saturday</option>
+                </select> 
+              </div>
             </div>
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-danger" id="addSessionBtn">Post New Class</button>
