--- a/public/members.html
+++ b/public/members.html
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <h3 class="mt-4 is-member d-none">My Class Schedule - <span id="currentMonth"></span></h3>
+    <h3 class="mt-4 is-member d-none">My Class Schedule</h3>
     <ul class="list-group list-group-horizontal is-member d-none">
       <li class="list-group-item" style="background: #00DA28">Currently Enrolled Classes</li>
       <li class="list-group-item" style="background: #FFBA25">Eligible Classes <button type="button"
@@ -137,7 +137,8 @@
             <th scope="col">Email Address</th>
             <th scope="col">Phone Number</th>
             <th scope="col">Rank</th>
-            <th scope="col">Enrolled Classes</th>
+            <th scope="col"></th>
+            <th scope="col"></th>
           </tr>
         </thead>
         <tbody class="members">
@@ -149,7 +150,7 @@
 
   </main>
 
-  <!-- Modal -->
+  <!-- Modal that pops up if class has exceeded in person limit -->
   <div class="modal fade" id="exceededLimitModal" tabindex="-1" aria-labelledby="exceededLimitModalLabel"
     aria-hidden="true">
     <div class="modal-dialog">
@@ -171,7 +172,7 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- Modal that shows which students are in a calendar session and checks attendance-->
   <div class="modal fade" id="studentsModal" tabindex="-1" aria-labelledby="studentsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
@@ -193,7 +194,7 @@
     </div>
   </div>
 
-  <!-- Modal -->
+  <!-- Modal to display form to add a new session-->
   <div class="modal fade" id="addSessionModal" tabindex="-1" aria-labelledby="addSessionModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
@@ -249,19 +250,81 @@
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-danger" id="addSessionBtn">Post New Class</button>
           </form>
-
         </div>
       </div>
     </div>
+  </div>
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-      crossorigin="anonymous"></script>
+  <!-- Modal that pops up to update a student record -->
+  <div class="modal fade" id="updateStudentModal" tabindex="-1" aria-labelledby="updateStudentModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-light">Update Student</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="roleSelect">Role</label>
+              <select class="form-control" id="roleSelect">
+                <option>Student</option>
+                <option>Teacher</option>
+              </select>
+            </div>
+            <div class="form-group">
+              <label for="rankSelect">Rank</label>
+              <select class="form-control" id="rankSelect">
+                <option>White</option>
+                <option>Blue</option>
+                <option>Yellow</option>
+                <option>Green</option>
+                <option>Red</option>
+                <option>Brown</option>
+                <option>Black</option>
+              </select>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" id="updateBtn" data-dismiss="modal">Update</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal that pops up to confirm deletion of a student record -->
+  <div class="modal fade" id="confirmDeleteModal" tabindex="-1" aria-labelledby="confirmDeleteLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title text-light">Confirm Delete</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Are you sure you want to delete <span id="studentName"></span> ?
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" id="confirmBtn" data-dismiss="modal">Confirm</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
 
 </body>
 
