updated page links

--- a/public/index.html
+++ b/public/index.html
@@ -37,13 +37,13 @@
                         <a class="nav-link active bg-danger" href="#">Home</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link text-light" href="#">About FS MMA</a>
+                        <a class="nav-link text-light" href="aboutUs.html">About FS MMA</a>
                     </li>
                     <li class="nav-item mr-3">
                         <a class="nav-link text-light" href="class_schedule.html">Classes</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link text-light" href="#">Contact Us</a>
+                        <a class="nav-link text-light" href="contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item mr-3 d-lg-none">
                         <a class="nav-link text-light" href="login.html">Login</a>
