--- a/public/kicks.html
+++ b/public/kicks.html
@@ -25,6 +25,9 @@
             <a class="navbar-brand text-white font-weight-bold" href="/logout">
                 Logout
             </a>
+            <a class="navbar-brand text-white font-weight-bold" href="/members">
+                My Info
+            </a>
         </div>
     </nav>
 
