--- a/public/aboutUs.html
+++ b/public/aboutUs.html
@@ -21,7 +21,7 @@
             <p class="h4 mb-0">Call 1-888-123-4567 to learn about our COVID-19 Safety Guidelines</p>
         </nav>
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="./imgs/martial-arts-square.png" width="100" height="100" class="d-inline-block align-middle"
                     alt="FS MMA logo" loading="lazy">
                 <h1 class="d-inline align-middle">FS MMA</h1>
@@ -39,13 +39,13 @@
                         <a class="nav-link text-light" href="index.html">Home</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link text-light" href="aboutUs.html">About FS MMA</a>
+                        <a class="nav-link active bg-danger" href="#">About FS MMA</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link active bg-danger" href="class_schedule.html">Classes</a>
+                        <a class="nav-link text-light" href="class_schedule.html">Classes</a>
                     </li>
                     <li class="nav-item mr-3">
-                        <a class="nav-link text-light" href="#">Contact Us</a>
+                        <a class="nav-link text-light" href="contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item mr-3 d-lg-none">
                         <a class="nav-link text-light" href="login.html">Login</a>
