--- a/public/members.html
+++ b/public/members.html
@@ -17,7 +17,7 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="./imgs/martial-arts-square.png" width="100" height="100" class="d-inline-block align-middle"
           alt="FS MMA logo" loading="lazy">
         <h1 class="d-inline align-middle">Welcome <span class="member-name"></span></h1>
