--- a/public/signup.html
+++ b/public/signup.html
@@ -17,7 +17,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="index.html">
         <img src="./imgs/martial-arts-square.png" width="100" height="100" class="d-inline-block align-middle"
           alt="FS MMA logo" loading="lazy">
         <h1 class="d-inline align-middle">FS MMA</h1>
@@ -35,13 +35,13 @@
             <a class="nav-link text-light" href="index.html">Home</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link text-light" href="#">About FS MMA</a>
+            <a class="nav-link text-light" href="aboutUs.html">About FS MMA</a>
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link text-light" href="class_schedule.html">Classes</a>
           </li>
           <li class="nav-item mr-3">
-            <a class="nav-link text-light" href="#">Contact Us</a>
+            <a class="nav-link text-light" href="contact.html">Contact Us</a>
           </li>
           <li class="nav-item mr-3 d-lg-none">
             <a class="nav-link text-light" href="login.html">Login</a>
