added data-session to classSchedule.js

--- a/public/members.html
+++ b/public/members.html
@@ -304,7 +304,7 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" id="updateBtn" data-dismiss="modal">Update</button>
+          <button type="button" class="btn btn-danger" id="updateStudentBtn" data-dismiss="modal">Update</button>
         </div>
       </div>
     </div>
@@ -324,7 +324,7 @@
           Are you sure you want to delete <span class="student-name"></span> ?
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" id="confirmBtn" data-dismiss="modal">Confirm</button>
+          <button type="button" class="btn btn-danger" id="confirmDeleteBtn" data-dismiss="modal">Confirm</button>
         </div>
       </div>
     </div>
