post attendance route

--- a/public/members.html
+++ b/public/members.html
@@ -188,7 +188,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-danger" id="attendanceBtn" data-dismiss="modal">Post Attendance</button>
+          <button type="submit" class="btn btn-danger" id="attendanceBtn">Post Attendance</button>
         </div>
       </div>
     </div>
@@ -248,7 +248,7 @@
                   <input type="date" class="form-control" id="end-date" name="end-date">
                 </div>
               </div>
-              <div class="form-group">
+              <div class="form-group col">
                 <label for="dayOfWeeks">Select Which Days of Week</label>
                 <select multiple class="form-select" name="dayOfWeek" id="dayOfWeeks">
                   <option value=0>Sunday</option>
