--- a/public/contact.html
+++ b/public/contact.html
@@ -57,7 +57,7 @@
                     <select id="faq" name="faq">
                       <option value="Classes">Classes</option>
                       <option value="sessions">sessions</option>
-                      <option value="usa">USA</option>
+                      <option value="pricing">pricing</option>
                     </select>
                 
                     <label for="subject">Subject</label>
@@ -79,10 +79,10 @@
             <a class="text-white" href="mailto:sbolotnikov@gmail.com">Sergey Bolotnikov</a>
         </div>
     </div>
-    <!-- Modal -->
+    <!-- Modal
     <div class="modal fade" id="myModal" role="dialog"></div>
     <!-- Handlebars -->
-    <script id="example-template" type="text/x-handlebars-template">
+    <!-- <script id="example-template" type="text/x-handlebars-template">
         {{#each kicks}}
         <div class="kick">
           <p>{{name}}</p>
@@ -90,7 +90,7 @@
           <p>{{time}}</p> 
         </div>                    
         {{/each}}                          
-    </script>
+    </script> --> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
