tweaked contact page

--- a/public/contact.html
+++ b/public/contact.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="stylesheet" href="./stylesheets/kicks_style.css">
     <script type="text/javascript" src="./js/kick.js" defer></script>
-    <script type="text/javascript" src="./js/contact.js" defer></script>
+    <script type="text/javascript" src="./js/login.js" defer></script>
 </head>
 
 <body>
