fixed click event propagation by unbinding nested event listeners, fixed contact page and links

--- a/public/kicks.html
+++ b/public/kicks.html
@@ -82,7 +82,7 @@
 
     </main>
     <!-- PIN ME TO THE BOTTOM-->
-    <div class="p-3 mb-2 bg-danger text-white">
+    <div class="fixed-bottom p-3 bg-danger text-white">
         <div class="d-flex flex-row justify-content-around">
             <p class="text-white">Contact Us:</p>
             <a class="text-white" href="mailto:jmc846@scarletmail.rutgers.gmail.com">Jonathan Cobb</a>
