--- a/public/contact.html
+++ b/public/contact.html
@@ -9,13 +9,14 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <!-- Moment.js -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script>
+    <!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.16.0/moment.min.js"></script> -->
     <!-- handlebars.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
     <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="stylesheet" href="./stylesheets/kicks_style.css">
-    <script type="text/javascript" src="./js/kick.js" defer></script>
+    <!-- <script type="text/javascript" src="./js/kick.js" defer></script> -->
     <script type="text/javascript" src="./js/login.js" defer></script>
+    <script type="text/javascript" src="./js/commonFunctions.js" defer></script>
 </head>
 
 <body>
@@ -66,8 +67,7 @@
                             <form class="login px-2 py-2">
                                 <div class="form-group">
                                     <label for="userEmail">Email</label>
-                                    <input type="email" class="form-control" id="userEmail"
-                                        aria-describedby="emailHelp">
+                                    <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp">
                                 </div>
                                 <div class="form-group">
                                     <label for="userPassword">Password</label>
@@ -91,7 +91,6 @@
 
         <h2 class="display-4 font-weight-bold">Contact Us</h2>
         <div class="col-lg-8 w">
-            <div>
                 <form class="contactUs">
                     <div class="form-group">
                         <label for="first name">First Name</label>
@@ -104,9 +103,9 @@
                     <div class="form-group">
                         <label for="faq">Frequently Asked Questions</label>
                         <select class="form-control" name="faq" id="faq">
-                            <option value="Classes">Classes</option>
+                            <option value="classes">Classes</option>
                             <option value="sessions">Sessions</option>
-                            <option value="usa">USA</option>
+                            <option value="pricing">Pricing</option>
                         </select>
                     </div>
                     <div class="form-group">
@@ -116,7 +115,6 @@
                     </div>
                     <input type="submit" value="Submit" class="btn btn-danger" id="submitBTN">
                 </form>
-            </div>
         </div>
 
         <div class="jumbotron jumbotron-fluid bg-transparent">
@@ -139,7 +137,7 @@
                         Copyright &#169 2020
                     </li>
                     <li class="nav-item">
-                        <a href="https://jmc846.github.io" class="footer-link">
+                        <a href="https://github.com/jmc846" class="footer-link">
                             jmc846
                         </a>
 
@@ -180,7 +178,7 @@
           <p>{{time}}</p> 
         </div>                    
         {{/each}}                          
-    </script> --> -->
+    </script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
