--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./stylesheets/style.css">
     <script src="js/login.js" defer></script>
-    <script type="text/javascript" src="./js/commonFunctions.js" defer></script>
+    <script type="text/javascript" src="js/commonFunctions.js" defer></script>
     <title>Full Stack MMA</title>
 </head>
 
@@ -61,8 +61,7 @@
                                 <form class="login px-2 py-2">
                                     <div class="form-group">
                                         <label for="userEmail">Email</label>
-                                        <input type="email" class="form-control" id="userEmail"
-                                            aria-describedby="emailHelp">
+                                        <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp">
                                     </div>
                                     <div class="form-group">
                                         <label for="userPassword">Password</label>
@@ -106,7 +105,7 @@
                         Copyright &#169 2020
                     </li>
                     <li class="nav-item">
-                        <a href="https://jmc846.github.io" class="footer-link">
+                        <a href="https://github.com/jmc846" class="footer-link">
                             jmc846
                         </a>
 
