--- a/public/members.html
+++ b/public/members.html
@@ -250,7 +250,7 @@
               </div>
               <div class="form-group col">
                 <label for="dayOfWeeks">Select Which Days of Week</label>
-                <select multiple class="form-select" name="dayOfWeek" id="dayOfWeeks">
+                <select multiple class="form-control" name="dayOfWeek" id="dayOfWeeks">
                   <option value=0>Sunday</option>
                   <option value=1>Monday</option>
                   <option value=2>Tuesday</option>
@@ -261,7 +261,7 @@
                 </select>
               </div>
             </div>
-            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-danger" id="cancelAddSession" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-danger" id="addSessionBtn">Post New Class</button>
           </form>
         </div>
