setup google oauth

--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,11 @@
                                         <a href="signup.html" role="button" class="btn btn-danger mx-2">Register</a>
                                     </div>
                                 </form>
+                                <div>
+                                    <a href="/auth/google">
+                                        <img src="./imgs/google-sign-in-btn.png" alt="Login with Google">
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </li>
