updated User model  to include profilePhotoUrl

--- a/public/login.html
+++ b/public/login.html
@@ -71,6 +71,11 @@
       <button type="submit" class="btn btn-danger" id="loginBtn">Login</button>
 
     </form>
+    <div>
+      <a href="/auth/google">
+          <img src="./imgs/google-sign-in-btn.png" alt="Login with Google">
+      </a>
+  </div>
   </main>
 
 <!-- Modal -->
