--- a/public/update_info.html
+++ b/public/update_info.html
@@ -52,7 +52,7 @@
 
   <main class="container">
     <h1 class="mt-2">
-      Update your profile
+      You have not signed in previously. Please update your record.
     </h1>
     <div class="alert alert-warning d-none" role="alert">
       <strong>Invalid form entries</strong> See below for fields that needs correction.
