--- a/public/signup.html
+++ b/public/signup.html
@@ -67,6 +67,11 @@
                     <button type="submit" class="btn btn-danger">Login</button>
                   </div>
                 </form>
+                <div>
+                  <a href="/auth/google">
+                      <img src="./imgs/google-sign-in-btn.png" alt="Login with Google">
+                  </a>
+              </div>
               </div>
             </div>
           </li>
