--- a/public/update_info.html
+++ b/public/update_info.html
@@ -51,13 +51,15 @@
   </header>
 
   <main class="container">
+
+    <h1 class="mt-2">Dear: <span class="member-name"></span> <span class="member-lastName"></span></h1>
     <h1 class="mt-2">
       You have not signed in previously. Please update your record.
     </h1>
     <div class="alert alert-warning d-none" role="alert">
       <strong>Invalid form entries</strong> See below for fields that needs correction.
     </div>
-    <!-- <form class="login">
+    <form class="login">
       <div class="form-group">
         <label for="userEmail">Email</label>
         <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" required>
@@ -69,7 +71,7 @@
 
       <button type="submit" class="btn btn-danger" id="loginBtn">Login</button>
 
-    </form> -->
+    </form> 
   </main>
 
 <!-- Modal -->
