--- a/public/signup.html
+++ b/public/signup.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./stylesheets/style.css">
   <script src="./js/signup.js" defer></script>
   <script src="./js/login.js" defer></script>
-  <script src="./js/commonFunctions.js" defer></script>
+  <script src="./js/commonFunctions.js"></script>
   <script src="./js/jquery.mask.min.js" defer></script>
 </head>
 
