--- a/public/goog_account_registered.html
+++ b/public/goog_account_registered.html
@@ -52,26 +52,14 @@
 
   <main class="container">
 
-    <h1 class="mt-2">Dear: <span class="member-name"></span> <span class="member-lastName"></span></h1>
-    <h1 class="mt-2">
-      You have not signed in previously. Please update your record.
-    </h1>
-    <div class="alert alert-warning d-none" role="alert">
-      <strong>Invalid form entries</strong> See below for fields that needs correction.
-    </div>
-    <form class="login">
-      <div class="form-group">
-        <label for="userEmail">Email</label>
-        <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp" required>
-      </div>
-      <div class="form-group">
-        <label for="userPassword">Password</label>
-        <input type="password" class="form-control" id="userPassword" required>
-      </div>
-
-      <button type="submit" class="btn btn-danger" id="loginBtn">Login</button>
-
-    </form> 
+    <h2 class="mt-2">
+      Congratulations! You have registered your Google Account. Please sign in again and update your profile. See you in class!
+    </h2>
+    <div>
+      <a href="/auth/google">
+        <img src="./imgs/google-sign-in-btn.png" alt="Login with Google">
+      </a>
+  </div>
   </main>
 
 <!-- Modal -->
