--- a/public/members.html
+++ b/public/members.html
@@ -32,7 +32,7 @@
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav nav-pills ml-auto">
 
-          <li class="nav-item mr-3">
+          <!-- <li class="nav-item mr-3">
             <a class="nav-link text-light" href="index.html">Home</a>
           </li>
           <li class="nav-item mr-3">
@@ -43,12 +43,16 @@
           </li>
           <li class="nav-item mr-3">
             <a class="nav-link text-light" href="contact.html">Contact Us</a>
-          </li>
+          </li> -->
           <li class="nav-item mr-3">
             <a class="nav-link text-light" href="/logout">Logout</a>
           </li>
         </ul>
       </div>
+      <div>
+        <img src="./imgs/martial-arts-square.png" alt="member photo" class="member-photo">
+      </div>
+
     </nav>
   </header>
 
