--- a/public/members.html
+++ b/public/members.html
@@ -51,6 +51,8 @@
       </div>
       <div>
         <img src="./imgs/martial-arts-square.png" alt="member photo" class="member-photo">
+        <button id="upload_widget" class="cloudinary-button">Upload files</button>
+        <script type="text/javascript" src="/js/member-upload.js" defer></script>
       </div>
 
     </nav>
