--- a/public/members.html
+++ b/public/members.html
@@ -51,8 +51,6 @@
       </div>
       <div>
         <img src="./imgs/martial-arts-square.png" alt="member photo" class="member-photo">
-        <button id="upload_widget" class="cloudinary-button">Upload files</button>
-        <script type="text/javascript" src="/js/member-upload.js" defer></script>
       </div>
 
     </nav>
@@ -83,6 +81,8 @@
 
         <button type="button" class="btn btn-danger" id="updateProBtn" data-toggle="modal" data-target="#updateProfileModal"
           style="margin-top: 0.5em;">Update Profile</button>
+          <button id="upload_widget" class="cloudinary-button btn btn-danger">Upload files</button>
+          <script type="text/javascript" src="/js/member-upload.js" defer></script>
       </div>
       <div class="col col-lg-7">
         <div class="card mt-4">
@@ -357,10 +357,10 @@
         <div class="modal-body" style="padding:0.5em;"> Please update following information</div>
         <img src="", alt="Profile image", style="width: 50%; align-self: center;" id='profilePhoto'>
         <form class="update">
-          <div class="form-group" style="margin:0.5em;">
+          <!-- <div class="form-group" style="margin:0.5em;">
             <label for="phoneNumber">Profile picture</label>
             <input type="url" class="form-control" id="profilePhotoURL" required>
-          </div>
+          </div> -->
           <div class="form-group" style="margin:0.5em;">
             <label for="phoneNumber">Phone number</label>
             <input type="tel" class="form-control" id="phoneNumber" required>
