--- a/public/members.html
+++ b/public/members.html
@@ -7,10 +7,14 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="./stylesheets/style.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+  <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script> 
   <script src="./js/classSchedule.js" defer></script>
   <script src="./js/members.js" defer></script>
+  <script src="./js/member-upload.js" defer></script>
   <script src="./js/commonFunctions.js" defer></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+
+  
   <title>Welcome, Martial Artist</title>
 </head>
 
@@ -81,8 +85,6 @@
 
         <button type="button" class="btn btn-danger" id="updateProBtn" data-toggle="modal" data-target="#updateProfileModal"
           style="margin-top: 0.5em;">Update Profile</button>
-          <button id="upload_widget" class="cloudinary-button btn btn-danger">Upload files</button>
-          <script type="text/javascript" src="/js/member-upload.js" defer></script>
       </div>
       <div class="col col-lg-7">
         <div class="card mt-4">
@@ -357,13 +359,14 @@
         <div class="modal-body" style="padding:0.5em;"> Please update following information</div>
         <img src="", alt="Profile image", style="width: 50%; align-self: center;" id='profilePhoto'>
         <form class="update">
-          <!-- <div class="form-group" style="margin:0.5em;">
-            <label for="phoneNumber">Profile picture</label>
-            <input type="url" class="form-control" id="profilePhotoURL" required>
-          </div> -->
+          <div class="form-group" style="margin:0.5em;">
+            <label for="profilePicture">Profile picture</label>
+            <input type="text" name="profilePicture" class="form-control" id="profilePhotoURL">
+            <button id="upload_widget" class="cloudinary-button">Upload files</button>
+          </div>
           <div class="form-group" style="margin:0.5em;">
             <label for="phoneNumber">Phone number</label>
-            <input type="tel" class="form-control" id="phoneNumber" required>
+            <input type="text" class="form-control" id="phoneNumber" required>
             <small id="phoneHelpBlock" class="form-text text-muted">This is a required field. 123-456-7890</small>
           </div>
           <div class="form-group" style="margin:0.5em;">
